# aegis

./: .gitignore  LICENSE  README.md  aegis.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  infolang.dune-package  infolang.install  infolang.opam
benchmarks/: benchmark_runner.ml  dune
benchmarks/benchmark-programs/: aegis-aes.ags  aegis-diffie-hellman.ags  aegis-exception.ags  aes.ml  (+4 more)
examples/: bad-exception-handling.ags  bad-method-call.ags  bad-print.ags  bad-resumable-exception.ags  calculator.ags  class.ags  class.txt  classes-correct.ags  classes-overapprox.ags  classes-successfully-fails.ags  classify-2.ags  classify-declassify.ags  classify.ags  control-flow-correct.ags  control-flow-overapprox.ags  control-flow-successfully-fails.ags  data-flow-correct.ags  data-flow-overapprox.ags  data-flow-successfully-fails.ags  diffie-hellman.ags  digital-signature.ags  double-try-catch.ags  exception-correct.ags  exception-overapprox.ags  exception-successfully-fails.ags  exceptions-in-classes.ags  exceptions-in-functions.ags  for-loop.ags  function.txt  high-exception.ags  high-function.ags  high-function.txt  implicit-flow-2.ags  implicit-flow.ags  let-statement.ags  let-statement.txt  low-function.ags  object-instantiation.ags  pitfall-of-only-static-analysis.ags  program.ags  (+14 more)
interpreter/: dune
src/: dune  main.ml  run_interpreter.ml  run_interpreter.mli
test/alcotest/parsing/: dune  test_lexer.ml
typing/: dune  type_environment.ml  type_environment.mli  type_program.ml  type_program.mli  typed_ast.ml  typed_ast.mli
(+331 files in other folders)
