(library
 (name test_parsing)
 (libraries alcotest core qcheck qcheck-alcotest parser_frontend)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (lint
  (pps
   ppx_js_style
   -check-doc-comments
   -annotated-ignores
   -styler
   -pretty
   -dated-deprecation)))

; (test
;  (name test_parser)
;  (libraries alcotest core qcheck qcheck-alcotest parser_frontend)
;  (lint
;   (pps
;    ppx_js_style
;    -check-doc-comments
;    -annotated-ignores
;    -styler
;    -pretty
;    -dated-deprecation)))
